# auto-a113

./: CMakeLists.txt  README.md  bas.cmake  release_notes.md
brp/: CMakeLists.txt
brp/include/a113/brp/: IO_port.hpp  IO_string_utils.hpp  block_diffuser.hpp  descriptor.hpp  descriptor.hpp.in  divergent_ring.hpp  wjpv3_utils.hpp
brp/src/: IO_port.cpp  IO_string_utils.cpp  _implemented.cpp
clkwrk/immersive/: CMakeLists.txt
clkwrk/immersive/include/a113/clkwrk/: imm_widgets.hpp  immersive.hpp
clkwrk/immersive/src/: _implemented.cpp
osp/: CMakeLists.txt
osp/fondles/: CMakeLists.txt
osp/fondles/hyper_net/: CMakeLists.txt  examples.drawio  main.cpp  main_ex2_ctrl.cpp
osp/include/: .gitignore
osp/include/a113/OSp/: IO_serial.hpp  IO_sockets.hpp  cache.hpp  core.hpp  dispenser.hpp  hyper_net.hpp  osp.hpp  osp.hpp.in  render3.hpp  tempo.hpp
osp/include/a113/osp/: IO_serial.hpp  IO_sockets.hpp  IO_utils.hpp  cache.hpp  core.hpp  dispenser.hpp  osp.hpp  render3.hpp  rixrat_core.hpp  sys_interface.hpp
osp/src/: IO_serial.cpp  IO_sockets.cpp  IO_utils.cpp  _implemented.cpp  core.cpp  hyper_net.cpp  render3.cpp
ruptures/COMMod/: CMakeLists.txt  main.cpp
ruptures/Chill-Rum/: CMakeLists.txt  client.cpp  server.cpp
ruptures/chill-rum/: CMakeLists.txt  client.cpp  common.hpp  server.cpp
ruptures/rixory-experimental/: CMakeLists.txt  main.cpp
ruptures/warc/bridge/: CMakeLists.txt  main.cpp
ruptures/warc/rig_3000/: interface.hpp  platformio.ini
ruptures/warc/rig_3000/schemes/: DEPRECATED_power_supply.drawio  modbus_registers.drawio
ruptures/warc/rig_3000/src/: core.hpp  gps.hpp  main.cpp  modbus.hpp
ucp/: CMakeLists.txt  _ucp_implemented.cpp
ucp/include/a113/ucp/: IO_i2c_ints.hpp  core.hpp
ucp/include/a113/ucp/espressif32/: IO_i2c.hpp
ucp/include/a113/ucp/sensor_drivers/: aht21.hpp  bme280.hpp  bmp280.hpp
ucp/rnk/: core.hpp
ucp/rnk/io/: BLE_UART_Core.hpp  BLE_UART_Her.hpp  BLE_UART_Literally_me.hpp
